--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,32 +2,7 @@ name: Build + tests
 
 on:
   pull_request:
-    branches: [ "master" ]
-  push:
-    workflow_dispatch:
-      inputs:
-        TEST_ENDPOINT:
-          description: "Endpoint for tests"
-          required: true
-          default: https://klassika-apteka.ru
-        TEST_BROWSER:
-          description: "Browser for tests"
-          required: true
-          default: chrome
-        ALLURE_JOB_RUN_ID:
-          description: "ALLURE_JOB_RUN_ID service parameter. Leave blank."
-          required: false
-        ALLURE_USERNAME:
-          description: "ALLURE_USERNAME service parameter. Leave blank"
-          required: false
-
-env:
-  IS_REMOTE: true
-  ALLURE_ENDPOINT: https://testing.allure.aws.qameta.in
-  ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
-  ALLURE_PROJECT_ID: ${{ secrets.ALLURE_PROJECT_ID }}
-  ALLURE_RESULTS: "build/allure-results"
-  ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
+    branches: ["master"]
 
 permissions:
   contents: read
@@ -39,23 +14,12 @@ jobs:
       - name: Start selenoid
         uses: Xotabu4/selenoid-github-action@v2
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
-      - name: install and configure allurectl
-        uses: allure-framework/setup-allurectl@v1
-        with:
-#          allure-endpoint: ${{ ALLURE_ENDPOINT }}
-          allure-token: ${{ secrets.ALLURE_TOKEN }}
-          allure-project-id: ${{ secrets.ALLURE_PROJECT_ID }}
       - name: Build with Gradle
-        run: |
-          allurectl watch -- ./gradlew clean test
-          export $( allurectl job-run env)
-          printenv | grep TEST_
-          printenv | grep ALLURE_
-        env:
-          TEST_ENDPOINT: ${{ github.event.inputs.TEST_ENDPOINT }}
-          TEST_BROWSER: ${{ github.event.inputs.TEST_BROWSER }}
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
