--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group 'org.example'
@@ -10,13 +11,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
-    implementation 'org.assertj:assertj-core:3.24.2'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
+
     testImplementation 'org.awaitility:awaitility:4.2.0'
-    testImplementation 'io.qameta.allure:allure-junit5:2.22.0'
+
     implementation 'com.codeborne:selenide:6.14.0'
+    implementation 'io.qameta.allure:allure-selenide:2.20.1'
 }
 
 test {
