--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,15 +11,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Start selenoid
-        uses: Xotabu4/selenoid-github-action@v2
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin'
-      - name: install and configure allurectl
-        uses: allure-framework/setup-allurectl@v1
-        with:
-          arguments: build
+
+      - name: Build
+        run: ./gradlew build
+
+      - name: Test
+        run: ./gradlew test
