--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 name: Build + tests
 
 on:
+  push:
+    branches: [ "BRANCH_01" ]
   pull_request:
     branches: ["master"]
 
@@ -23,4 +25,4 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action
         with:
-            arguments: build
+          arguments: build
